Succesfully Added Signing Configuration

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,24 +7,36 @@ android {
 
     defaultConfig {
         applicationId "com.example.capstoneproject"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    signingConfigs{
+        release {
+
+            storeFile file("$rootDir/key1.jks")
+            storePassword 'sourav'
+            keyAlias 'key1'
+            keyPassword 'sourav'
+        }
+
+    }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
         }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
 
 }
 
